# SCMEPY

./: Scmpy.py  setup.cfg
