[metadata]
name = Scmepy
version = 0.0.1
author = Ericksulino Moura, José Miqueias
author_email = ericksulino@gmail.com
description = Um conversor de varias unidades de medida
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ericksulino/SCMEPY.git